# Matte-Browser

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTEXT.md  Cargo.toml  Dockerfile.hermetic  PLAN.md  README.md  docker-compose.hermetic.yml  rustfmt.toml
.github/workflows/: ci.yml  fuzz.yml
accessibility/: Cargo.toml
accessibility/src/: accessibility_tree.rs  error.rs  input_handler.rs  lib.rs
browser/: Cargo.toml
browser/src/: app.rs  error.rs  extension_host.rs  main.rs  navigation.rs  profile_manager.rs  settings_manager.rs  tab_manager.rs  window_manager.rs
canvas/src/: canvas_2d.rs
cmake/: MatteBrowserConfig.cmake.in
common/: Cargo.toml
common/src/: crash.rs  error.rs  ipc.rs  lib.rs  platform.rs  privilege.rs  types.rs  utils.rs
css/: Cargo.toml
css/src/: lib.rs  tokenizer.rs
devtools/: Cargo.toml
devtools/src/: console_inspector.rs  elements_inspector.rs  error.rs  lib.rs  network_inspector.rs  performance_tools.rs  styles_inspector.rs
docs/: ARCHITECTURE.md  BUILD.md  CODE_REVIEW_CHECKLIST.md  DEVELOPMENT.md
dom/: Cargo.toml
dom/src/: css_at_rules.rs  css_property_parser.rs  css_selector.rs  css_tokenizer.rs  cssom.rs  dom.rs  error.rs  events.rs  flexbox.rs  grid_layout.rs  html_parser.rs  layout.rs  lib.rs  mutation_observer.rs  pseudo_classes.rs  selector_indexing.rs  selector_matching.rs  shadow_dom.rs  text_shaping.rs  traversal.rs  typography.rs
gpu/: Cargo.toml
gpu/src/: lib.rs
graphics/: Cargo.toml
graphics/src/: compositor.rs  error.rs  lib.rs  rendering.rs
js/: Cargo.toml
js/src/: lib.rs
js_engine/: Cargo.toml
js_engine/src/: ast.rs  async_await.rs  async_await_test.rs  builtins.rs  builtins_test.rs  bytecode.rs  bytecode_test.rs  class_system.rs  class_system_test.rs  destructuring.rs  destructuring_test.rs  error.rs  es_modules.rs  es_modules_test.rs  garbage_collector.rs  garbage_collector_test.rs  hot_path.rs  hot_path_test.rs  inline_cache.rs  inline_cache_test.rs  lexer.rs  lib.rs  memory_pool.rs  memory_pool_test.rs  parser.rs  source_map.rs  stack.rs  stack_test.rs  tiering.rs  tiering_test.rs  webidl.rs  webidl_test.rs
layout/src/: flexbox.rs  font_loading.rs  grid.rs  typography.rs
media/src/: elements.rs
net/: Cargo.toml
net/src/: lib.rs
network/: Cargo.toml
network/src/: lib.rs
networking/: Cargo.toml
networking/src/: cache.rs  cache_test.rs  error.rs  http.rs  http_test.rs  lib.rs  security.rs  security_test.rs  tls.rs  tls_test.rs
platform/: Cargo.toml
platform/src/: lib.rs
renderer/: Cargo.toml
renderer/src/: dom_integration.rs  js_vm.rs  lib.rs  rendering_pipeline.rs  site_isolation.rs  style_engine.rs
scripts/: build-linux.sh  build-macos.sh  build-windows.bat  cross-build.sh  cross-compile.toml  hermetic-toolchain.sh
storage/: Cargo.toml
storage/src/: error.rs  indexed_db.rs  lib.rs  web_storage.rs
tools/: Cargo.toml
tools/src/: lib.rs
