[workspace]
members = [
    "browser",
    "renderer", 
    "network",
    "gpu",
    "dom",
    "css",
    "js",
    "net",
    "graphics",
    "platform",
    "common",
    "tools",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Matte Browser Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/matte-browser/matte"
keywords = ["browser", "web", "rendering", "javascript"]
categories = ["web-programming", "gui"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }

# Platform and UI
winit = "0.29"
wgpu = "0.19"
raw-window-handle = "0.6"

# Networking
reqwest = { version = "0.11", features = ["json"] }
rustls = "0.21"
webpki-roots = "0.25"

# Parsing and text processing
nom = "7.1"
cssparser = "0.33"
html5ever = "0.26"

# Memory and performance
dashmap = "5.5"
parking_lot = "0.12"

# URL and text processing
url = "2.4"
regex = "1.9"
lazy_static = "1.4"
uuid = "1.0"

# Development and testing
criterion = "0.5"
proptest = "1.3"
quickcheck = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true
