[package]
name = "accessibility"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
parking_lot = "0.12"
dashmap = "5.0"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
tokio-test = "0.4"

[dev-dependencies]
tokio-test = "0.4"
