[package]
name = "dom"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
