[package]
name = "js_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Workspace dependencies
common = { path = "../common" }

# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }

# Parsing and text processing
nom = { workspace = true }
regex = { workspace = true }

# Memory and performance
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Development and testing
criterion = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
quickcheck = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
bench = ["criterion"]
test = ["proptest", "quickcheck"]
