[package]
name = "networking"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"
getrandom = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
